--- a/cardmatcher.html
+++ b/cardmatcher.html
@@ -33,5 +33,21 @@
 		</div>
 	</div>
 
+
+	<div class="form-container">
+		<form id="grid-size-form">
+			<label for="grid-size">Grid Size</label>
+			<br>
+			<input type="text" name="grid-size" id="grid-size">
+			<br>
+			<input type="submit" value="Create Grid" id="grid-size-submit">
+			<br>
+		</form>
+	</div>
+
+	<div class="grid-container">
+		<div id="matcher-grid">
+		</div>
+	</div>
 </body>
 </html>
